crates/flotilla-core/src/hop_chain/snapshots/flotilla_core__hop_chain__tests__e2e_local_workspace_flattened.snap
---
source: crates/flotilla-core/src/hop_chain/tests.rs
assertion_line: 1465
expression: flat
---
cleat attach 'main__shell__0' --cwd '/home/alice/dev/my-repo'
