crates/flotilla-core/src/hop_chain/snapshots/flotilla_core__hop_chain__tests__e2e_remote_send_keys_flattened.snap
---
source: crates/flotilla-core/src/hop_chain/tests.rs
expression: "&flattened"
---
[
    "SendKeys: [Type(\"cd '/home/alice/dev/my-repo/wt-feat' && cleat attach feat__shell__0 --cwd '/home/alice/dev/my-repo/wt-feat'\"), WaitForPrompt]",
    "Command: ssh -t 'alice@feta.local'",
]
