crates/flotilla-core/src/hop_chain/snapshots/flotilla_core__hop_chain__tests__e2e_remote_send_keys_resolved_plan.snap
---
source: crates/flotilla-core/src/hop_chain/tests.rs
assertion_line: 1500
expression: "&resolved"
---
ResolvedPlan(
    [
        SendKeys {
            steps: [
                Type(
                    "cd '/home/alice/dev/my-repo/wt-feat' && cleat attach 'feat__shell__0' --cwd '/home/alice/dev/my-repo/wt-feat'",
                ),
                WaitForPrompt,
            ],
        },
        Command(
            [
                Literal(
                    "ssh",
                ),
                Literal(
                    "-t",
                ),
                Quoted(
                    "alice@feta.local",
                ),
            ],
        ),
    ],
)
