crates/flotilla-core/src/hop_chain/snapshots/flotilla_core__hop_chain__tests__e2e_workspace_resolved_plan.snap
---
source: crates/flotilla-core/src/hop_chain/tests.rs
assertion_line: 1413
expression: "&resolved"
---
ResolvedPlan(
    [
        Command(
            [
                Literal(
                    "ssh",
                ),
                Literal(
                    "-t",
                ),
                Quoted(
                    "alice@feta.local",
                ),
                NestedCommand(
                    [
                        Literal(
                            "${SHELL:-/bin/sh}",
                        ),
                        Literal(
                            "-l",
                        ),
                        Literal(
                            "-c",
                        ),
                        NestedCommand(
                            [
                                Literal(
                                    "cd",
                                ),
                                Quoted(
                                    "/home/alice/dev/my-repo/wt-feat",
                                ),
                                Literal(
                                    "&&",
                                ),
                                Quoted(
                                    "cleat",
                                ),
                                Literal(
                                    "attach",
                                ),
                                Quoted(
                                    "feat__shell__0",
                                ),
                                Literal(
                                    "--cwd",
                                ),
                                Quoted(
                                    "/home/alice/dev/my-repo/wt-feat",
                                ),
                                Literal(
                                    "--cmd",
                                ),
                                NestedCommand(
                                    [
                                        Literal(
                                            "env",
                                        ),
                                        Literal(
                                            "FLOTILLA_ATTACHABLE_ID='feat__shell__0'",
                                        ),
                                        Literal(
                                            "FLOTILLA_DAEMON_SOCKET='/tmp/flotilla.sock'",
                                        ),
                                        Literal(
                                            "${SHELL:-/bin/sh}",
                                        ),
                                        Literal(
                                            "-lc",
                                        ),
                                        Quoted(
                                            "bash",
                                        ),
                                    ],
                                ),
                            ],
                        ),
                    ],
                ),
            ],
        ),
    ],
)
