crates/flotilla-core/src/hop_chain/snapshots/flotilla_core__hop_chain__tests__snapshot_remote_terminal_attach_always_send_keys.snap
---
source: crates/flotilla-core/src/hop_chain/tests.rs
assertion_line: 1328
expression: resolved
---
ResolvedPlan(
    [
        SendKeys {
            steps: [
                Type(
                    "mock-attach 'remote-shell-0'",
                ),
                WaitForPrompt,
            ],
        },
        Command(
            [
                Literal(
                    "ssh",
                ),
                Quoted(
                    "feta",
                ),
            ],
        ),
    ],
)
