crates/flotilla-core/src/hop_chain/snapshots/flotilla_core__hop_chain__tests__snapshot_remote_terminal_attach_always_wrap.snap
---
source: crates/flotilla-core/src/hop_chain/tests.rs
assertion_line: 1307
expression: resolved
---
ResolvedPlan(
    [
        Command(
            [
                Literal(
                    "ssh",
                ),
                Quoted(
                    "feta",
                ),
                NestedCommand(
                    [
                        Literal(
                            "mock-attach",
                        ),
                        Quoted(
                            "remote-shell-0",
                        ),
                    ],
                ),
            ],
        ),
    ],
)
